--- a/practice.html
+++ b/practice.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Rohit Sharma</h1>
+    <h1>Akashuuuuuuu</h1>
     <img width="200px" src="rohit.jpg" alt="">
     <p>My Favourite Player</p>
 </body>
